src/components/Header/Header.css
.header-container {
  background-color: black;
  color: white;
  justify-content: space-between;
  align-items: center;
  height: auto;
  position: fixed;
  top: 0;
}

.profilePic {
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  background-color: white;
  overflow: visible;
  object-fit: cover;
}

.header-buttons-container{
  display: flex;
  flex-direction: row;
  gap: 0.5em;
  margin: 1em;
}


.header-buttons-container a {
  text-decoration: none;
}

